--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -126,6 +126,7 @@ en:
       button_send: 'Saving...'
     show:
       title: 'Badger - Entry overview'
+      legend: 'Entry'
       barcode: 'Barcode'
       sent: 'Sent?'
       yes: 'Yes - '
