custom images per type of appliance, split print options

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -21,7 +21,8 @@ de:
 
     name: 'Name'
     username: 'Nützername'
-    abbrevatio: 'Abkürzung'
+    abbrevation: 'Abkürzung'
+    url: 'URL'
     message: 'Nachricht'
     email: 'Email'
     password: 'Kennwort'
@@ -94,6 +95,8 @@ de:
 
 # app/views/entries
   entry:
+    sticker: 'Sticker'
+    ticket: 'Zettel'
     edit:
       title: 'Badger - Eintrag bearbeiten'
       legend: 'Eintrag bearbeiten'
